@@ -7,6 +7,7 @@ Stable versions
 	- fix IT note recover after cut
 	- fix IT instrument without note after note cut event
 	- fix IT pan reset on new note instead of new instrument
+	- fix IT volume swing problems
 	- fix XM glissando effect
 	- fix Scream Tracker 3 period limits
 	- fix Scream Tracker 3 tremolo memory
